--- a/BeeJeeTestingTask/Base.lproj/Main.storyboard
+++ b/BeeJeeTestingTask/Base.lproj/Main.storyboard
@@ -48,7 +48,7 @@
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="contactRepresentationLbl" destination="FRc-bE-ng9" id="hJu-aF-jXz"/>
-                                    <segue destination="G0A-ui-KFv" kind="show" id="dCM-Q1-pNe"/>
+                                    <segue destination="6S3-zH-L0O" kind="show" identifier="edit" id="Mrx-5X-II1"/>
                                 </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="total" id="1OI-C3-pnE" customClass="TotalCell" customModule="BeeJeeTestingTask" customModuleProvider="target">
@@ -238,34 +238,6 @@
             </objects>
             <point key="canvasLocation" x="1437.5999999999999" y="114.69265367316342"/>
         </scene>
-        <!--Table View Controller-->
-        <scene sceneID="FNz-se-jOp">
-            <objects>
-                <tableViewController id="G0A-ui-KFv" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="my8-ga-uRa">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="4LY-3u-Ffj">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="4LY-3u-Ffj" id="bHy-aj-a1A">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="G0A-ui-KFv" id="axg-Qw-AQW"/>
-                            <outlet property="delegate" destination="G0A-ui-KFv" id="mf5-ga-nib"/>
-                        </connections>
-                    </tableView>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ome-8M-ckY" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1425.5" y="-587.5"/>
-        </scene>
         <!--Navigation Controller-->
         <scene sceneID="cGa-55-Xft">
             <objects>
@@ -285,4 +257,7 @@
             <point key="canvasLocation" x="-310" y="106"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="Mrx-5X-II1"/>
+    </inferredMetricsTieBreakers>
 </document>
